--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 
     </div>
     <div class="links">
-        <a href="https://www.instagram.com/tech_faded"><img src="images/instagram.png" alt="Instagram"></a>
-        <a href="https://t.me/anonfaded"><img src="images/telegram.png" alt="Telegram"></a>
+        <a href="https://www.instagram.com/username"><img src="images/instagram.png" alt="Instagram"></a>
+        <a href="https://t.me/username"><img src="images/telegram.png" alt="Telegram"></a>
     </div> 
 </div>
 
 
-<!-- modify this form HTML and place wherever you want your form -->
+<!-- modify this form HTML and place wherever you want your form, go to formspree website make your form and paste that html code below and replace this one -->
 <div id="email-form-section" class="container">
 <form
   action="https://formspree.io/f/meqbowzj"
